--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,15 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+ 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -263,4 +271,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
