--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,24 @@ html {
 *::after {
   box-sizing: inherit;
 }
+body{
+  background-color: #f2f2f2;
+}
+.hero{
+  background-image: url(../img/encabezado.jpg);
+  height: 100vh;
+  background-position: top center;
+  background-size: cover;
+
+}
+.contenido-header{
+  padding-top:40px;
+}
+.redes-sociales{
+  text-align: center;
+
+}
+
  
 /* ==========================================================================
    Helper classes
