--- a/css/main.css
+++ b/css/main.css
@@ -99,31 +99,130 @@ textarea {
    ========================================================================== */
 html {
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
-body{
+body {
   background-color: #f2f2f2;
+  font-family: "Open Sans", sans-serif;
 }
-.hero{
+.hero {
   background-image: url(../img/encabezado.jpg);
   height: 100vh;
   background-position: top center;
   background-size: cover;
-
 }
-.contenido-header{
-  padding-top:40px;
+.contenido-header {
+  padding-top: 40px;
 }
-.redes-sociales{
+@media (min-width: 768px) {
+  .contenido-header {
+    padding-top: 1rem;
+  }
+}
+.redes-sociales {
   text-align: center;
-
+}
+.redes-sociales a {
+  color: white;
+  font-size: 2rem;
+  margin-right: 20px;
+}
+.redes-sociales:last-of-type {
+  margin-right: 0;
+}
+.informacion-evento {
+  text-align: center;
+  color: white;
+}
+@media (min-width: 768px) {
+  .informacion-evento {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+}
+.informacion-evento p {
+  margin: 0;
+  display: inline;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.informacion-evento p i {
+  color: #fe4918;
+  font-size: 3rem;
+}
+p.fecha {
+  float: left;
+}
+p.ciudad {
+  float: right;
+  text-align: right;
+}
+p.slogan {
+  text-transform: none !important;
+}
+p.slogan span {
+  font-weight: bold;
 }
 
- 
+@media (min-width: 768px) {
+  h1.nombre-sitio {
+    font-size: 11vw;
+    margin: 0;
+    line-height: 1;
+  }
+}
+
+h1.nombre-sitio {
+  font-size: 5.9vw;
+  text-transform: uppercase;
+  font-family: "PT Sans", sans-serif;
+}
+h2 {
+  font-family: "Oswald", sans-serif;
+}
+.contenedor {
+  width: 95%;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .contenedor {
+    width: 90%;
+  }
+}
+.barra {
+  background-color: #353535;
+  padding: 20px 0;
+}
+.logo {
+  width: 80%;
+}
+.logo img{
+  width: 100%
+}
+@media (min-width: 768px) {
+  .logo {
+    width: 33%;
+    float: left;
+  }
+}
+.navegacion-principal{
+  display: none;
+}
+@media (min-width: 768px) {
+  .navegacion-principal{
+    width: 66.6%;
+    float: right;
+    text-align: right;
+    display:block;
+  }
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
