--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,17 @@ h1.nombre-sitio {
 }
 h2 {
   font-family: "Oswald", sans-serif;
+  font-size: 2.8rem;
+  text-transform: uppercase;
+  text-align: center;
+}
+h2::after{
+  content: '';
+  margin: 0 auto;
+  background-image: url(../img/separador.png);
+  height: 30px;
+  width: 100px;
+  display: block;
 }
 .contenedor {
   width: 95%;
@@ -278,6 +289,14 @@ h2 {
   margin-bottom: 6px;
 }
 
+.seccion {
+  padding: 30px 0;
+
+}
+.seccion p{
+  font-size: 1.4rem;
+  text-align: center;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
